Change generated files to be C instead of headers.
Remove AdobeCA.p7c from autogenerated files. Just include the
array in the source.

Simplifies makefile dependencies and makes the sizes of each
bit of data easier to look at.

It also paves the way for eventually using objcopy to create binary
objects for the fonts instead of needing to use hexdump.

--- a/platform/win32/libmupdf.vcproj
+++ b/platform/win32/libmupdf.vcproj
@@ -2521,6 +2521,30 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="generated"
+			>
+			<File
+				RelativePath="..\..\generated\pdf-cmap-cjk.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\generated\pdf-cmap-extra.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\generated\pdf-cmap-utf32.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\generated\pdf-cmap-utf8.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\generated\pdf-js-util.c"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
